# guidolib

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  readme.md
lang/javascript/: Makefile
lang/javascript/src/device/: canvasdevice.cpp
server/: main.cpp  server.cpp  utilities.h
src/engine/abstract/: ARFontAble.cpp  ARMusicalVoice.cpp  ARNote.cpp  ARNote.h  ARPageFormat.cpp  ARPositionTag.h  ARTie.h  TagParameterStrings.cpp
src/engine/graphic/: GObject.cpp  GRAccidental.h  GRArpeggio.cpp  GRArpeggio.h  GRArticulation.cpp  GRArticulation.h  GRBeam.cpp  GRBowing.cpp  GRBowing.h  GRDynamics.cpp  GRDynamics.h  GREvent.cpp  GREvent.h  GRFingering.cpp  GRFingering.h  GRFlag.h  GRGlobalStem.cpp  GRGlobalStem.h  GRHarmony.cpp  GRHarmony.h  GRMark.cpp  GRMusic.cpp  GRMusic.h  GRNotationElement.cpp  GRNotationElement.h  GRNotations.cpp  GRNoteDot.h  GRNoteHead.h  GROctava.cpp  GROctava.h  GRPTagARNotationElement.h  GRPage.cpp  GRPage.h  GRPageText.cpp  GRPageText.h  GRSimpleBeam.cpp  GRSingleNote.cpp  GRSingleNote.h  GRSliceHeight.cpp  GRSlur.cpp  (+17 more)
src/engine/include/: GUIDOEngine.h  GUIDOScoreMap.h
src/engine/lib/: GUIDOEngine.cpp  GUIDOInternal.cpp  MeterVisitor.cpp
src/engine/maps/: GuidoMapCollector.cpp
src/engine/operations/: GRColorVisitor.cpp  GRColorVisitor.h  GRFixVisitor.cpp  GRPitchYVisitor.cpp  GRPitchYVisitor.h  GRShowVisitor.cpp  GRShowVisitor.h  GRVisitor.h
src/engine/parser/: GuidoDefs.h
tools/: .gitignore  CMakeLists.txt  Makefile  audioselector.cc  client_secrets.json  common.cpp  common.hh  generate_thumbnail.py  generate_video.py  get_json_mapping.cpp  oh.py  processing_store.json  reset_data.sh  sizedebug.cpp  upload_video.py  upload_video.py-oauth2.json  videogen.sh  videogeneration.cpp  xml_asco_to_midi.cpp
tools/ssh/: id_rsa  id_rsa.pub
